# stress

./: .gitignore  CMakeLists.txt  VaMPy_WSS.py  algos.tex  benchMark.cpp  benchmark.hpp  calcWSS.cpp  calcWSS.h  createShapeFunctions.cpp  gaussQuadrature.cpp  generateMatrix.cpp  generateMatrix.h  gq.cpp  gq.h  graph.cpp  graph.hpp  hrtime.h  matrix.cpp  matrix.hpp  mmult.c  physics.cpp  physics.hpp  pipeline.c  plotMesh.cpp  readMesh.cpp  sampleData.csv  sampleData.ods  solveLinearSystem.cpp  vtkvmtkFEAssembler.cxx  vtkvmtkFEAssembler.h  vtkvmtkUnstructuredGridGradientFilter.cxx
ds/: h5Reader.cpp  h5test
ds/sampleData/: h5Reader.cpp  readVelocityData.cpp  xdmfFile.xdmf
viz/LinearCellDemo/: CMakeLists.txt
